--- a/src/main/resources/META-INF/hibernate.properties
+++ b/src/main/resources/META-INF/hibernate.properties
@@ -1,7 +1,7 @@
-database.driver=org.postgresql.Driver
-database.url=jdbc:postgresql://localhost:5432/hibernatebd
-database.user=postgres
-database.password=2008
-database.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+database.driver=com.mysql.jdbc.Driver
+database.url=jdbc:mysql://localhost:3306/usersdb
+database.user=root
+database.password=zaq12wsx
+database.dialect=org.hibernate.dialect.MySQLDialect
 
 
