--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
 		<jdk.version>1.7</jdk.version>
 		<spring.version>4.2.3.RELEASE</spring.version>
 		<hibernate.version>4.3.5.Final</hibernate.version> 
-		<!--  <hibernate.version>4.1.2</hibernate.version> -->
+		<!-- This hibernate version 4.1.2 is throwing exceptions --> 
+		<!-- <hibernate.version>4.1.2</hibernate.version> -->
 		<spring.security.version>4.0.3.RELEASE</spring.security.version>
 		<!--<spring.security.version>4.1.6.RELEASE</spring.security.version> -->
 		<jstl.version>1.2</jstl.version>
